
Package: PSCBS
==============

Version: 0.15.3 [2011-10-23]
o BUG FIX: callAmplifications() for CBS generated an error, if
  more than one chromosome were called.
o BUG FIX: The length of a segment must be defined as 'end-start' 
  and not 'end-start+1' so that the the total length of all segments
  adds up correctly.


Version: 0.15.2 [2011-10-21]
o Added mergeThreeSegments() to AbstractCBS.
o BUG FIX: Recent updates caused segmentByPairedPSCBS(data) not to
  work when 'data' is a data frame.


Version: 0.15.1 [2011-10-21]
o By setting 'start' and 'end' to NAs in 'knownSegments' (chromosome must
  still be specified), it is possible to insert an empty segment that
  disconnects the two flanking segments, e.g. centromere and the two arms.


Version: 0.15.0 [2011-10-20]
o Added support for specifying priorly known segments, such as chromosome
  arms nad centromeres, in segmentByCBS() via argument 'knownSegments'.
o CLEANUP: Dropped a stray debug output message in segmentByPairedPSCBS().


Version: 0.14.3 [2011-10-17]
o Added argument 'asMissing' to dropRegions() for AbstractCBS.


Version: 0.14.2 [2011-10-16]
o Implemented extractCNs() for CBS and PairedPSCBS.
o Added extractTotalCNs() for CBS.


Version: 0.14.1 [2011-10-14]
o Added implementation of extractRegions() for AbstractCBS, which
  utilizes extractSegments().
o Added abstract extractSegments() and extractSegment() for AbstractCBS.
o Now extractTCNAndDHs() for PairedPSCBS passes '...' to getSegments().


Version: 0.14.0 [2011-10-10]
o CLEANUP: Harmonization of several method names.
o CLEANUP: Internal restructuring of the source code files.


Version: 0.13.5 [2011-10-10]
o Added dropChangePoint() for AbstractCBS, which is just a
  "name wrapper" for mergeTwoSegments().
o Added dropRegion() and dropRegions() for AbstractPSCBS, where
  the former is a wrapper for the latter dropRegions().
o Added updateMeans() and mergeTwoSegments() for CBS in addition
  already available PairedCBS versions.